--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <!-- details modal  -->
 
 
-    <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle px-6 md:px-0">
+    <dialog id="my_modal_5" class="modal modal-center sm:modal-middle px-6 md:px-0">
         <div class="modal-box">
 
             <div id="modalContainer">
