footer input bg issue

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <div class="right pl-8 md:pl-5">
                 <h2 class="text-2xl font-bold pb-2">Drop a Message</h2>
                 <div class="subscribe mt-12">
-                    <label class="input items-center p-0  bg-black">
+                    <label class="input items-center p-0 bg-[#131313]">
 
                         <input type="email" placeholder="Enter Your Email "
                             class="input  w-full border-2 focus:border-white" />
