--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 </svg>
                             </div>
                             <ul tabindex="0"
-                                class="menu menu-sm dropdown-content rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                                class="menu menu-sm dropdown-content rounded-box bg-white z-[20] mt-3 w-52 p-2 shadow">
                                 <li><a>Home</a></li>
                                 <li><a>Shope</a></li>
                                 <li><a>Contact</a></li>
