--- a/index.html
+++ b/index.html
@@ -251,6 +251,22 @@
         </div>
     </dialog>
 
+    <dialog id="adoptModal" class="modal modal-center sm:modal-middle px-6 md:px-0">
+        <div class="modal-box">
+
+            <div id="adoptModalContainer">
+
+            </div>
+
+            <div id="modalAction" class="modal-action">
+                <form method="dialog" class="w-full">
+                    <!-- if there is a button in form, it will close the modal -->
+                    <button class="btn w-full text-xl">Close</button>
+                </form>
+            </div>
+        </div>
+    </dialog>
+
 
 
 
@@ -308,7 +324,7 @@
             <div class="right pl-8 md:pl-5">
                 <h2 class="text-2xl font-bold pb-2">Drop a Message</h2>
                 <div class="subscribe mt-12">
-                    <label class="input items-center p-0 bg-[#131313]">
+                    <label class="input items-center p-0  bg-[#131313]">
 
                         <input type="email" placeholder="Enter Your Email "
                             class="input  w-full border-2 focus:border-white" />
